feat: add swagger and refactor handlers errors
