# api/helpers/response.go
@@ -1,0 +1,6 @@
+package helpers
+
+type Tokens struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
